--- a/portfolio.css
+++ b/portfolio.css
@@ -2,15 +2,21 @@
 header{
     background-color: #FFF8F3;
     max-width: 100%;
-    height: 400px;
+    height: 800px;
     padding: 20px;
+    background-image: url(../images/icons/developer.png);
+    background-repeat: no-repeat;
+    
 }
 .cover{
     
-    background-image: url(../images/icons/developer.png);
-    background-repeat: no-repeat;
+    /* background-image: url(../images/icons/developer.png); */
+    
+    
     height: 500px;
    margin-left: 20px;
+   padding-top: 0;
+   margin-top: 0;
    }
 
 nav{
@@ -39,4 +45,18 @@ nav li{
     padding: 10px 30px;
     border: 0;
     
+}
+.text-secondary{
+    color: grey;
+}
+.myself{
+    padding: 0px 70px;
+}
+.intro{
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    display: flex;
+    
+    justify-content: space-between;
 }
